@@ -78,6 +78,12 @@ Argp.prototype._errorTry = function (){
 	console.error ("Try " + str + " for more information.");
 };
 
+Argp.prototype._errorChoice = function (value){
+	console.error (this._script + ": Unrecognized choice '" + value + "'.");
+	this._errorTry ();
+	process.exit (1);
+};
+
 Argp.prototype._errorConvert = function (name, type){
 	console.error (this._script + ": Option '" + name + "' is not a " + type +
 			".");
@@ -395,6 +401,20 @@ Argp.prototype._newOption = function (o){
 			}else{
 				//Convert to the configured type
 				this._convertType (o);
+			}
+			
+			//Validate with the choices
+			if (o.opt.choices){
+				var found = false;
+				for (var i=0, ii=o.opt.choices.length; i<ii; i++){
+					if (o.opt.choices[i] === o.value){
+						found = true;
+						break;
+					}
+				}
+				if (!found){
+					this._errorChoice (o.value);
+				}
 			}
 			
 			//Use the reviver, if any
@@ -804,12 +824,14 @@ Argp.prototype._option = function (o){
 		delete o.default;
 		delete o.optional;
 		delete o.type;
+		delete o.choices;
 		o.negate = !!o.negate;
 		o.default = o.negate;
 	}else{
 		o.type = o.type || String;
 		o.optional = !!o.optional;
 		o.reviver = o.reviver || null;
+		o.choices = o.optional ? null : o.choices || null;
 		delete o.negate;
 		
 		if (o.default === undefined){
