@@ -2,12 +2,11 @@
 
 var argv = require("./lib")
 		.on ("start", function (){
-			console.log(this.options())
+			//console.log(this.options())
 		})
 		.body ()
-				.option ({ short: "a", long: "abc", aliases: ["wat"] })
+				.option ({ short: "a", long: "abc", argument:"asd", type: Number, optional: true, choices: [2] })
 				.help()
-				.usage()
 				.end ()
 		.argv ()
 console.log(argv)
